--- a/ToDoList/nbproject/private/private.properties
+++ b/ToDoList/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=D:\\Users\\marco.piccin\\AppData\\Roaming\\NetBeans\\13\\build.properties
